--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Ignore the virtual environment
 venv/
 .venv/
+# local scratch / temp stuff
+Source_Dir/
+*/Scratch/
+
 # Ignore temporary or draft files
 ai-slop.py
 astro2.py
